img renamed to images

--- a/students/dunaieva_alona/02_html/education.html
+++ b/students/dunaieva_alona/02_html/education.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
         <h1>Освіта</h1>
         <p>Національний університет "Полтавська політехніка імені Юрія Кондартюка"</p>
         <p><b>01.09.2018-31.12.2023</b> <i>Освітня програма <u>"Облік і оподаткування"</u></i></p>
-        <img src="./img/nupp.jpg" alt="nupp" width="700" height="400">
+        <img src="images/nupp.jpg" alt="nupp" width="700" height="400">
     </section>
     <hr>
 </body>
