--- a/students/dunaieva_alona/02_html/hobby.html
+++ b/students/dunaieva_alona/02_html/hobby.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
@@ -16,11 +16,11 @@
 <section id="hobby">
     <h1>Хоббі</h1>
     <p>Катання на велосипеді</p>
-    <img src="./img/bike.jpg" alt="bike" width="700" height="400">
+    <img src="images/bike.jpg" alt="bike" width="700" height="400">
     <p><i>Також у вільний час читаю книгу</i></p>
-    <img src="./img/book.jpg" alt="book" width="300" height="400">
+    <img src="images/book.jpg" alt="book" width="300" height="400">
     <p><i>Або малюю</i></p>
-    <img src="./img/paint.jpg" alt="paint" width="300" height="400">
+    <img src="images/paint.jpg" alt="paint" width="300" height="400">
 </section>
 <hr>
 
