--- a/students/dunaieva_alona/02_html/last-job.html
+++ b/students/dunaieva_alona/02_html/last-job.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
@@ -23,7 +23,7 @@
             <li>управління чергою;</li>
             <li>забезпечення належного порядку в операційному залі, своєчасному і якісному обслуговуванн іклієнтів.</li>
         </ul>
-        <img src="./img/bank.jpg" alt="bank" width="700" height="400">
+        <img src="images/bank.jpg" alt="bank" width="700" height="400">
     </section>
     <hr>
 
