--- a/students/dunaieva_alona/02_html/index.html
+++ b/students/dunaieva_alona/02_html/index.html
@@ -14,7 +14,7 @@
         <a href="hobby.html#hobby">Hobby</a>
     </nav>
     <hr>
-    <img src="./img/photo-me.jpg" alt="me" width="300">
+    <img src="images/photo-me.jpg" alt="me" width="300">
     <h1>Дунаєва Альона Сергіївна</h1>
     <h3>|телефон: <a href="tel:0688086469">0688086469</a>|<br>|email: <a href="mailto:da@gmail.com">da@gmail.com</a>|<br>|адреса: м.Полтава, вул.Собороності 68|</h3>
 </body>
