added code and style

--- a/students/hridina_anastasiia/12_css_position/index.html
+++ b/students/hridina_anastasiia/12_css_position/index.html
@@ -35,24 +35,26 @@
                 <nav class="nav">
                     <ul class="nav__list">
                         <li class="nav__link"><a href="#">INTRODUCTION</a></li>
-                        <li class="nav__link"><a href="#">CORE COMPONENTS</a></li>
-                        <li class="nav__link"><a href="#">REACT FUNDAMENTALS</a></li>
-                        <li class="nav__link"><a href="#">HANDLING TEXT INPUT</a></li>
+                        <li class="nav__link"><a href="#components">CORE COMPONENTS</a></li>
+                        <li class="nav__link"><a href="#react">REACT FUNDAMENTALS</a></li>
+                        <li class="nav__link"><a href="#input">HANDLING TEXT INPUT</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="main">
-                <div class="introduction">
+                <div id="introduction" class="introduction">
                     <h3>INTRODUCTION<sup>Chapter 1</sup></h3>
                     <p>Welcome to the very start of your React Native journey! If you're looking for environment
                         setup
                         instructions, they've
-                        moved to <u>their own section.</u> Continue reading for an introduction to the documentation,
+                        moved to <u>their own section.</u> Continue reading for an introduction to the
+                        documentation,
                         Native
                         Components, React, and
-                        more!</p>
+                        more!
+                    </p>
                 </div>
-                <div class="components">
+                <div id="components" class="components">
                     <h3>CORE COMPONENTS<sup>Chapter 2</sup></h3>
                     <p>React Native is an open source framework for building Android and iOS applications using
                         React
@@ -68,9 +70,10 @@
                         You
                         can
                         learn more about
-                        React in the next section. But first, let’s cover how components work in React Native.</p>
+                        React in the next section. But first, let’s cover how components work in React Native.
+                    </p>
                 </div>
-                <div class="react">
+                <div id="react" class="react">
                     <h3>REACT FUNDAMENTALS<sup>Chapter 3</sup>
                     </h3>
                     <p>React Native runs on <u>React</u>, a popular open source library for building user interfaces
@@ -98,7 +101,8 @@
                                 < />
                         </mark>
                     </p>
-                    <p>The React docs have<u>a comprehensive guide to JSX</u> you can refer to learn even more. Because
+                    <p>The React docs have<u>a comprehensive guide to JSX</u> you can refer to learn even more.
+                        Because
                         JSX is
                         JavaScript, you can
                         use variables inside it. Here you are declaring a <mark>name</mark> for the cat, name, and
@@ -120,27 +124,32 @@
                         that comes from user interaction. State gives your components memory!
                     </p>
                 </div>
-                <div class="text__input">
+                <div id="input" class="text__input">
                     <h3>HANDLING TEXT INPUT<sup>Chapter 4</sup></h3>
-                    <p>TextInput is a Core Component that allows the user to enter text. It has an <i>onChangeText</i>
+                    <p>TextInput is a Core Component that allows the user to enter text. It has an
+                        <i>onChangeText</i>
                         prop
                         that
                         takes
                         a function to
-                        be called every time the text changed, and an onSubmitEditing prop that takes a function to
+                        be called every time the text changed, and an onSubmitEditing prop that takes a function
+                        to
                         be
                         called
                         when the text is
-                        submitted.</p>
+                        submitted.
+                    </p>
                     <p>For example, let's say that as the user types, you're translating their words into a
                         different
                         language.
                         In this new
-                        language, every single word is written the same way: 🍕. So the sentence "Hello there Bob"
+                        language, every single word is written the same way: 🍕. So the sentence "Hello there
+                        Bob"
                         would
                         be
                         translated as "🍕
-                        🍕".</p>
+                        🍕".
+                    </p>
                 </div>
             </div>
         </div>
