--- a/students/hridina_anastasiia/09_selectors/index.html
+++ b/students/hridina_anastasiia/09_selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <style>
         body {
             font-family: Montserrat;
@@ -22,30 +22,31 @@
 
 <body>
     <header class="header">
-        <nav class="nav">
-            <ul class="menu">
-                <li class="menu__item">
-                    <a href="#" class="menu__link">Home</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#aboutme" class="menu__link">About me</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#skills" class="menu__link">Skills</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#portfolio" class="menu__link">Portfolio</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#contacts" class="menu__link">Contacts</a>
-                </li>
-            </ul>
-        </nav>
+        <div class="container">
+            <nav class="nav">
+                <ul class="menu">
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">Home</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#aboutme" class="menu__link">About me</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#skills" class="menu__link">Skills</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#portfolio" class="menu__link">Portfolio</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#contacts" class="menu__link">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
-
     <main>
         <section>
-            <div class="container">
+            <div class="container__heading">
                 <h1 class="heading">Denis Novik</h1>
                 <img src="./images/denis_novik_photo.jpg" width="943" height="387" alt="Denis Novik">
             </div>
