--- a/students/hridina_anastasiia/11_flexbox/index.html
+++ b/students/hridina_anastasiia/11_flexbox/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productly</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
     <header class="header">
         <container class="container menu">
             <div class="logo__left">
-                <img src="./images/productly_logo.svg" alt="Productly">
+                <img src="./css/images/productly_logo.svg" alt="Productly">
             </div>
             <nav class="nav">
                 <ul class="menu">
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div class="design__images">
-                    <img src="./images/image.png" alt="">
+                    <img src=".//css/images/image.png" alt="">
                 </div>
             </div>
 
@@ -60,22 +60,22 @@
                 <h2>We design tools to unveil <br> your superpowers</h2>
                 <ul class="tests">
                     <li class="test__link purple">
-                        <img src="./images/purple_icon.png" alt="Purple icon">
+                        <img src="./css/images/purple_icon.png" alt="Purple icon">
                         <h4>First click tests</h4>
                         <p>While most people enjoy casino gambling.</p>
                     </li>
                     <li class="test__link orange">
-                        <img src="./images/orange_icon.png" alt="Orange icon">
+                        <img src="./css/images/orange_icon.png" alt="Orange icon">
                         <h4>Design surveys</h4>
                         <p>Sports betting, lottery and bingo playing for the fun.</p>
                     </li>
                     <li class="test__link red">
-                        <img src="./images/red_icon.svg" alt="Red icon">
+                        <img src="./css/images/red_icon.svg" alt="Red icon">
                         <h4>Preference tests</h4>
                         <p>The Myspace page defines the individual.</p>
                     </li>
                     <li class="test__link blue">
-                        <img src="./images/blue_icon.png" alt="Blue icon">
+                        <img src="./css/images/blue_icon.png" alt="Blue icon">
                         <h4>Five second tests</h4>
                         <p>Personal choices and the overall personality of the person.</p>
                     </li>
@@ -88,7 +88,7 @@
     </main>
     <footer class="footer">
         <div class="footer__logo">
-            <img src="./images/productly_logo.svg" alt="Productly">
+            <img src="./css/images/productly_logo.svg" alt="Productly">
         </div>
         <div class="block__one">
             <h4>Quick Links</h4>
