fixed some issues

--- a/students/havrylova_kateryna/11_flexbox/index.html
+++ b/students/havrylova_kateryna/11_flexbox/index.html
@@ -13,180 +13,187 @@
 
 </head>
 
-<body class="container body_container">
+<body>
     <header class="header">
-        <nav class="head">
-            <div class="head__logo logo">
-                <img class="logo" src="./images/bitmap.png" alt="">
-                <img class="logo" src="./images/productly.svg" alt="">
-            </div>
-            <ul class="head__menu menu">
-                <li class="menu__item">
-                    <a class="first-menu" href="#product" class="menu__link">
-                        Product
-                    </a>
-                </li>
-                <li class="menu__item">
-                    <a href="#customers">Customers</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#pricing">Pricing</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#resources">Resources</a>
-                </li>
-            </ul>
-            <div class="head__btn">
-                <button class="in">
-                    Sign In
-                </button>
-                <button class="up">
-                    Sign Up
-                </button>
-            </div>
-        </nav>
+        <div class="container">
+            <nav class="head">
+                <div class="head__logo logo">
+                    <img class="logo" src="./images/bitmap.png" alt="">
+                    <img class="logo" src="./images/productly.svg" alt="">
+                </div>
+                <ul class="head__menu menu">
+                    <li class="menu__item">
+                        <a class="first-menu" href="#product" class="menu__link">
+                            Product
+                        </a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#customers">Customers</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#pricing">Pricing</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#resources">Resources</a>
+                    </li>
+                </ul>
+                <div class="head__btn">
+                    <button class="in">
+                        Sign In
+                    </button>
+                    <button class="up">
+                        Sign Up
+                    </button>
+                </div>
+            </nav>
+        </div>
     </header>
 
     <main>
-        <section class="section1">
-            <div class="col-6">
-                <div class="section1__text">
-                    <h2 class="section1__text-title">
-                        The Design Thinking superpowers
-                    </h2>
+        <div class="container">
+            <section class="section1">
+                <div class="col-6">
+                    <div class="section1__text">
+                        <h2 class="section1__text-title">
+                            The Design Thinking superpowers
+                        </h2>
 
-                    <p class="section1__tex-main">
-                        Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to
-                        imagine
-                        your next user experience.
-                    </p>
+                        <p class="section1__tex-main">
+                            Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to
+                            imagine
+                            your next user experience.
+                        </p>
 
+                        <button class="button-large">
+                            Get started
+                        </button>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <img class="contetn__img" src="./images/people.svg" alt="">
+                </div>
+            </section>
+
+            <section class="section2">
+                <h1 class="secton2__title">
+                    We design tools to unveil <br> your superpowers
+                </h1>
+
+                <div class="section2__content">
+                    <div class="col-3">
+                        <div class="section2__block">
+                            <img src="./images/icon1.svg" alt="">
+                            <h4 class="section2__block-title">
+                                First click tests
+                            </h4>
+                            <p class="section2__bloc-text">
+                                While most people enjoy casino gambling,
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="section2__block">
+                            <img src="./images/icon2.svg" alt="">
+                            <h4 class="section2__block-title">
+                                Design surveys
+                            </h4>
+                            <p class="section2__bloc-text">
+                                Sports betting, lottery and bingo playing for the fun </p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="section2__block">
+                            <img src="./images/icon3.svg" alt="">
+                            <h4 class="section2__block-title">
+                                Preference tests </h4>
+                            <p class="section2__bloc-text">
+                                The Myspace page defines the individual. </p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="section2__block">
+                            <img src="./images/icon4.svg" alt="">
+                            <h4 class="section2__block-title">
+                                Five second tests </h4>
+                            <p class="section2__bloc-text">
+                                Personal choices and the overall personality of the person. </p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="section2__content-btn">
                     <button class="button-large">
-                        Get started
+                        Sign up Now
                     </button>
                 </div>
-            </div>
-            <div class="col-6">
-                <img class="contetn__img" src="./images/people.svg" alt="">
-            </div>
-        </section>
 
-        <section class="section2">
-            <h1 class="secton2__title">
-                We design tools to unveil <br> your superpowers
-            </h1>
-
-            <div class="section2__content">
-                <div class="col-3">
-                    <div class="section2__block">
-                        <img src="./images/icon1.svg" alt="">
-                        <h4 class="section2__block-title">
-                            First click tests
-                        </h4>
-                        <p class="section2__bloc-text">
-                            While most people enjoy casino gambling,
-                        </p>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="section2__block">
-                        <img src="./images/icon2.svg" alt="">
-                        <h4 class="section2__block-title">
-                            Design surveys
-                        </h4>
-                        <p class="section2__bloc-text">
-                            Sports betting, lottery and bingo playing for the fun </p>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="section2__block">
-                        <img src="./images/icon3.svg" alt="">
-                        <h4 class="section2__block-title">
-                            Preference tests </h4>
-                        <p class="section2__bloc-text">
-                            The Myspace page defines the individual. </p>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="section2__block">
-                        <img src="./images/icon4.svg" alt="">
-                        <h4 class="section2__block-title">
-                            Five second tests </h4>
-                        <p class="section2__bloc-text">
-                            Personal choices and the overall personality of the person. </p>
-                    </div>
-                </div>
-
-            </div>
-            <div class="section2__content-btn">
-                <button class="button-large">
-                    Sign up Now
-                </button>
-            </div>
-
-        </section>
+            </section>
+        </div>
     </main>
+
     <footer class="footer">
-        <div class="col-3">
-            <div class="footer__logo logo">
-                <img class="logo" src="./images/bitmap.png" alt="">
-                <img class="logo" src="./images/productly.svg" alt="">
+        <div class="container conteiner_footer">
+            <div class="col-3">
+                <div class="footer__logo logo">
+                    <img class="logo" src="./images/bitmap.png" alt="">
+                    <img class="logo" src="./images/productly.svg" alt="">
+                </div>
             </div>
-        </div>
 
-        <div class="col-3">
-            <ul class="footer__links">
-                <li class="links__item">
-                    <h3 class="links_title">
-                        Quick Links
-                    </h3>
-                </li>
-                <li class="links__item">
-                    About Us
-                </li>
-                <li class="links__item">
-                    Blog
-                </li>
-                <li class="links__item">
-                    Contact
-                </li>
-                <li class="links__item">
-                    FAQ
-                </li>
-            </ul>
-        </div>
+            <div class="col-3">
+                <ul class="footer__links">
+                    <li class="links__item">
+                        <h3 class="links_title">
+                            Quick Links
+                        </h3>
+                    </li>
+                    <li class="links__item">
+                        About Us
+                    </li>
+                    <li class="links__item">
+                        Blog
+                    </li>
+                    <li class="links__item">
+                        Contact
+                    </li>
+                    <li class="links__item">
+                        FAQ
+                    </li>
+                </ul>
+            </div>
 
-        <div class="col-3">
-            <ul class="footer__links">
-                <li class="links__item">
-                    <h3 class="links_title">
-                        Legal Stuff
-                    </h3>
-                </li>
-                <li class="links__item">
-                    Disclaimer
-                </li>
-                <li class="links__item">
-                    Financing
-                </li>
-                <li class="links__item">
-                    Privacy Policy
-                </li>
-                <li class="links__item">
-                    Terms of Service
-                </li>
-            </ul>
-        </div>
+            <div class="col-3">
+                <ul class="footer__links">
+                    <li class="links__item">
+                        <h3 class="links_title">
+                            Legal Stuff
+                        </h3>
+                    </li>
+                    <li class="links__item">
+                        Disclaimer
+                    </li>
+                    <li class="links__item">
+                        Financing
+                    </li>
+                    <li class="links__item">
+                        Privacy Policy
+                    </li>
+                    <li class="links__item">
+                        Terms of Service
+                    </li>
+                </ul>
+            </div>
 
-        <div class="col-3">
-            <h3 class="links_title">
-                Knowing you're always on the best energy deal.
-            </h3>
-            <input class="form" type="text" value="Enter your phone Number">
-            <div class="footer-btn">
-                <button class="button-large">
-                    Sign up Now
-                </button>
+            <div class="col-3">
+                <h3 class="links_title">
+                    Knowing you're always on the best energy deal.
+                </h3>
+                <input class="form" type="text" value="Enter your phone Number">
+                <div class="footer-btn">
+                    <button class="button-large">
+                        Sign up Now
+                    </button>
+                </div>
             </div>
         </div>
     </footer>
