--- a/students/motkaliuk_andrii/14_vector_graphics/src/index.html
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/index.html
@@ -18,46 +18,60 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="logo">
-                <img src="./images/logo.svg" alt="logo">
-            </div>
-            <nav class="menu">
-                <ul>
-                    <li class="menu_item"><a href="#">Product</a></li>
-                    <li class="menu_item"><a href="#">Customers</a></li>
-                    <li class="menu_item"><a href="#">Pricing</a></li>
-                    <li class="menu_item"><a href="#">Resources</a></li>
-                </ul>
-            </nav>
-            <div class="sign-in-up">
-                <div class="sign-in">
-                    <a class="sign-in_button" href="#">Sign In</a>
+            <div class="row">
+                <div class="col-4">
+                    <div class="logo">
+                        <img src="./images/logo.svg" alt="logo">
+                    </div>
                 </div>
-                <div class="sign-up">
-                    <a class="sign-up_button" href="#">Sign Up</a>
+                <div class="col-4">
+                    <nav class="menu">
+                        <ul>
+                            <li class="menu_item"><a href="#">Product</a></li>
+                            <li class="menu_item"><a href="#">Customers</a></li>
+                            <li class="menu_item"><a href="#">Pricing</a></li>
+                            <li class="menu_item"><a href="#">Resources</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-4">
+                    <div class="sign-in-up">
+                        <div class="sign-in">
+                            <a class="sign-in_button" href="#">Sign In</a>
+                        </div>
+                        <div class="sign-up">
+                            <a class="sign-up_button" href="#">Sign Up</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
 
     <main>
-        <div class="container">
-            <section class="design">
-                <div class="design_item1">
-                    <h1 class="design_header">The Design Thinking superpowers</h1>
-                    <p class="design_item_content">Tools, tutorials, design and innovation experts, all in one place!
-                        The most intuitive way to imagine your next user experience.</p>
+        <section class="design">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="design_item1">
+                            <h1 class="design_header">The Design Thinking superpowers</h1>
+                            <p class="design_item_content">Tools, tutorials, design and innovation experts, all in one
+                                place!
+                                The most intuitive way to imagine your next user experience.</p>
 
-                    <div class="button_container">
-                        <a class="get_started_button" href="#">Get started</a>
+                            <div class="button_container">
+                                <a class="get_started_button" href="#">Get started</a>
+                            </div>
+                        </div>
                     </div>
+                    <divc class="col-6">
+                        <div class="design_item2">
+                            <img src="./images/des_thinking.svg" alt="logo">
+                        </div>
+                    </divc>
                 </div>
-                <div class="design_item2">
-                    <img src="./images/des_thinking.svg" alt="logo">
-                </div>
-            </section>
-        </div>
-
+            </div>
+        </section>
         <section class="we-design">
             <div class="container">
                 <h2 class="we-design_header">We design tools to unveil<br> your superpowers</h2>
